@@ -1,5 +1,10 @@
 PHORONIX TEST SUITE CHANGE-LOG
 
+Phoronix Test Suite (Git)
+
+pts-core: Result parser improvements
+pts-core: Add AppendToArgumentsDescription option to result parser capabilities
+
 Phoronix Test Suite 7.0.1
 28 March 2017
 
